--- a/styles/style.css
+++ b/styles/style.css
@@ -1,7 +1,6 @@
 /* general ----------------------------------------- */
 body {
-  font-family: 'Helvetica Neue', Arial, 'Hiragino Kaku Gothic ProN',
-    'Hiragino Sans', Meiryo, sans-serif;
+  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   color: #404040;
 }
 
@@ -12,12 +11,12 @@ img {
 
 a {
   text-decoration: none;
-  color: black;
+  color: #404040;
 }
 
 ul {
   -webkit-padding-start: 0px;
-  padding-inline-start: 0px;
+          padding-inline-start: 0px;
 }
 
 li {
@@ -28,66 +27,100 @@ button {
   all: unset;
 }
 
+select,
+input[type=text],
+input[type=email] {
+  height: 50px;
+  padding: 0 5px;
+}
+
+input[type=radio] {
+  width: 20px;
+  height: 50px;
+}
+
+/* common  ----------------------------------------- */
+.main-title {
+  font-size: 28px;
+  font-weight: bold;
+}
+
+.sub-title {
+  font-size: 20px;
+}
+
+.content-width {
+  width: 100%;
+  max-width: 1260px;
+  margin: 0 auto;
+  padding: 0 30px;
+}
+
+.select-common {
+  width: 160px;
+}
+
+.input-name {
+  width: 200px;
+}
+
+.input-email {
+  width: 240px;
+}
+
+.err-msg {
+  height: 20px;
+  padding-left: 5px;
+  margin-top: 3px;
+  color: red;
+}
+
+.btn {
+  background-color: #4e70be;
+  cursor: pointer;
+}
+.btn a {
+  display: block;
+  padding: 10px 20px;
+  color: white;
+  font-weight: bold;
+}
+
 /* member-mst.html ----------------------------------------- */
 .member-mst header {
   background-color: #8faadc;
-  height: 80px;
+  height: 110px;
 }
 .member-mst .hd-nav {
   width: 100%;
   max-width: 1260px;
-  height: 100%;
   margin: 0 auto;
-  padding: 0 30px;
+  height: 100%;
+}
+.member-mst .hd-nav__ul {
+  height: 100%;
   display: flex;
   justify-content: space-between;
   align-items: center;
   flex-wrap: wrap;
 }
-.member-mst .hd-nav__left {
-  display: flex;
-  flex-wrap: wrap;
-  width: 50%;
-}
-.member-mst .hd-nav__left li {
-  color: white;
-  font-size: 25px;
-  font-weight: bold;
-}
-.member-mst .hd-nav__left li:nth-child(2) {
-  margin-left: 60px;
-}
-.member-mst .hd-nav__right {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  width: 50%;
-}
-.member-mst .hd-nav__right li {
-  color: white;
-  font-weight: bold;
-}
-.member-mst .hd-nav__right li a {
-  color: white;
-}
 .member-mst .hd-nav__item {
-  padding: 10px 0;
+  padding: 5px 30px;
+  color: white;
+  font-weight: bold;
 }
-.member-mst .hd-nav__btn button {
-  background-color: #4e70be;
-}
-.member-mst .hd-nav__btn button a {
-  padding: 10px 20px;
+.member-mst .hd-nav__item a {
+  color: white;
   display: block;
 }
+.member-mst .hd-nav__btn button {
+  margin: 5px 30px;
+}
 .member-mst .member-search {
-  width: 100%;
-  margin: 40px auto 20px;
-  padding: 0 30px;
-  max-width: 1260px;
+  margin-top: 40px;
+  margin-bottom: 20px;
 }
 .member-mst .member-search__title {
-  font-size: 20px;
   margin-bottom: 20px;
 }
 .member-mst .member-search__form {
@@ -103,64 +136,59 @@ button {
 }
 .member-mst .member-search__form-group label {
   display: block;
-  margin-right: 7px;
+  margin: 0 3px 0 10px;
   line-height: 1.3;
 }
-.member-mst .member-search__form-group select,
-.member-mst .member-search__form-group input {
-  height: 50px;
+.member-mst .member-search__form-group label[for=venue] {
+  margin-left: 0;
 }
-.member-mst .member-search__submit {
-  padding: 10px 20px;
-  background-color: #4e70be;
-  color: white;
-  font-weight: bold;
-  cursor: pointer;
+.member-mst .member-search__form-group-button {
+  margin-left: auto;
+  margin-bottom: 20px;
 }
-.member-mst .member {
-  width: 100%;
-  margin: 20px auto;
-  padding: 0 30px;
-  max-width: 1260px;
+.member-mst .member-list-and-details {
   display: flex;
   justify-content: space-between;
 }
-.member-mst .member .member-list {
+.member-mst .member-list {
   width: 45%;
 }
-.member-mst .member .member-list__title {
-  font-size: 25px;
-  font-weight: bold;
+.member-mst .member-list__title {
   color: #4e70be;
-  margin-bottom: 10px;
+  margin-bottom: 20px;
 }
-.member-mst .member .member-list__table {
+.member-mst .member-list__table-wrapper {
+  overflow-y: scroll;
+  max-height: 100vh;
+}
+.member-mst .member-list__table {
   width: 100%;
   border-collapse: collapse;
 }
-.member-mst .member .member-list__table thead th {
+.member-mst .member-list__table thead th {
   background-color: #8faadc;
   color: white;
 }
-.member-mst .member .member-list__table th,
-.member-mst .member .member-list__table td {
+.member-mst .member-list__table th,
+.member-mst .member-list__table td {
   border: 1px solid #808080;
   padding-top: 7px;
   padding-bottom: 7px;
 }
-.member-mst .member .member-list__table td {
+.member-mst .member-list__table td {
   padding-left: 3px;
 }
-.member-mst .member .member-list__table .td-name a {
+.member-mst .member-list__table .td-name a {
   color: #4e70be;
 }
-.member-mst .member .member-details {
+.member-mst .member-details {
   width: 53%;
 }
-.member-mst .member .member-details .tab_item {
+.member-mst .member-details .tab_item {
   width: 33.3333333333%;
-  height: 50px;
-  line-height: 50px;
+  height: 62px;
+  padding-top: 20px;
+  line-height: 1;
   background-color: #bfbfbf;
   text-align: center;
   display: block;
@@ -171,39 +199,120 @@ button {
   border-bottom: 3px solid #808080;
   cursor: pointer;
 }
-.member-mst .member .member-details .tab_item.member-info {
+.member-mst .member-details .tab_item.member-info-tab {
   border-left: 3px solid #808080;
 }
-.member-mst .member .member-details .tab_item.my-venue {
+.member-mst .member-details .tab_item.my-venue-tab {
   border-left: 3px solid #808080;
   border-right: 3px solid #808080;
 }
-.member-mst .member .member-details .tab_item.other-venue {
+.member-mst .member-details .tab_item.other-venue-tab {
   border-right: 3px solid #808080;
 }
-.member-mst .member .member-details input[name='tab_item'] {
+.member-mst .member-details input[name=tab_item] {
   display: none;
 }
-.member-mst .member .member-details .tab_content {
+.member-mst .member-details .tab_content {
   display: none;
-  padding: 40px 40px 0;
   clear: both;
   overflow: hidden;
   border-left: 3px solid #808080;
   border-right: 3px solid #808080;
   border-bottom: 3px solid #808080;
+  padding: 40px 30px;
 }
-.member-mst .member .member-details #member-info:checked ~ #member-info_content,
-.member-mst .member .member-details #my-venue:checked ~ #my-venue_content,
-.member-mst
-  .member
-  .member-details
-  #other-venue:checked
-  ~ #other-venue_content {
+.member-mst .member-details #member-info:checked ~ #member-info_content,
+.member-mst .member-details #my-venue:checked ~ #my-venue_content,
+.member-mst .member-details #other-venue:checked ~ #other-venue_content {
   display: block;
 }
-.member-mst .member .member-details .tabs input:checked + .tab_item {
+.member-mst .member-details .tabs input:checked + .tab_item {
   background-color: white;
   border-bottom: none;
   cursor: auto;
-} /*# sourceMappingURL=style.css.map */
+}
+.member-mst .member-info__title {
+  color: #4e70be;
+  padding-bottom: 20px;
+}
+.member-mst .member-info__form-group {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 30px;
+}
+.member-mst .member-info__form-group label {
+  width: 20%;
+}
+.member-mst .member-info__form-group input,
+.member-mst .member-info__form-group select,
+.member-mst .member-info__form-group textarea,
+.member-mst .member-info__form-group .err-msg {
+  width: 78%;
+}
+.member-mst .member-info__form-group .err-msg {
+  margin-left: auto;
+}
+.member-mst .member-info__form-group-radio {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.member-mst .member-info__form-group-radio .title {
+  width: 20%;
+}
+.member-mst .member-info__form-group-radio .radio-buttons,
+.member-mst .member-info__form-group-radio .err-msg {
+  width: 78%;
+}
+.member-mst .member-info__form-group-radio .radio-buttons {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.member-mst .member-info__form-group-radio .radio-buttons label {
+  margin: 0 12px 0 3px;
+}
+.member-mst .member-info__form-group-radio .err-msg {
+  margin-left: auto;
+}
+.member-mst .member-info__form-group-zip-code {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  align-items: center;
+  margin-bottom: 20px;
+}
+.member-mst .member-info__form-group-zip-code label {
+  width: 20%;
+}
+.member-mst .member-info__form-group-zip-code .zip-code-contents,
+.member-mst .member-info__form-group-zip-code .err-msg {
+  width: 78%;
+}
+.member-mst .member-info__form-group-zip-code .zip-code-contents {
+  margin-left: auto;
+  display: flex;
+  justify-content: space-between;
+}
+.member-mst .member-info__form-group-zip-code .zip-code-contents input,
+.member-mst .member-info__form-group-zip-code .zip-code-contents button {
+  width: 48%;
+}
+.member-mst .member-info__form-group-zip-code .zip-code-contents button {
+  text-align: center;
+}
+.member-mst .member-info__form-group-zip-code .err-msg {
+  margin-left: auto;
+}
+.member-mst .member-info__form-required-item {
+  font-size: 14px;
+  font-weight: bold;
+  color: white;
+  background-color: #8faadc;
+  padding: 3px 5px;
+  letter-spacing: 2px;
+}/*# sourceMappingURL=style.css.map */
