--- a/styles/style.scss
+++ b/styles/style.scss
@@ -7,15 +7,8 @@ $cGray: #808080;
 $cLightBlack: #404040;
 $cLightGray: #bfbfbf;
 $contentMaxWidth: 1260px;
-$navHeight: 80px;
-$ftMd: 20px;
-$ftLg: 25px;
+$navHeight: 110px;
 $pdLR: 30px;
-$mpXs: 10px;
-$mpSm: 20px;
-$mpMd: 40px;
-$mpLg: 60px;
-$mpXl: 100px;
 
 // breakpoints -----------------------------------------
 $breakpoints: (
@@ -24,7 +17,6 @@ $breakpoints: (
   'lg': 'screen and (min-width: 960px)',
   'xl': 'screen and (min-width: 1280px)',
 ) !default;
-
 @mixin mq($breakpoint: md) {
   @media #{map-get($breakpoints, $breakpoint)} {
     @content;
@@ -45,7 +37,7 @@ img {
 
 a {
   text-decoration: none;
-  color: $cBlack;
+  color: $cLightBlack;
 }
 
 ul {
@@ -60,6 +52,57 @@ button {
   all: unset;
 }
 
+select,
+input[type='text'],
+input[type='email'] {
+  height: 50px;
+  padding: 0 5px;
+}
+input[type='radio'] {
+  width: 20px;
+  height: 50px;
+}
+
+/* common  ----------------------------------------- */
+.main-title {
+  font-size: 28px;
+  font-weight: bold;
+}
+.sub-title {
+  font-size: 20px;
+}
+.content-width {
+  width: 100%;
+  max-width: $contentMaxWidth;
+  margin: 0 auto;
+  padding: 0 $pdLR;
+}
+.select-common {
+  width: 160px;
+}
+.input-name {
+  width: 200px;
+}
+.input-email {
+  width: 240px;
+}
+.err-msg {
+  height: 20px;
+  padding-left: 5px;
+  margin-top: 3px;
+  color: red;
+}
+.btn {
+  background-color: $cBlue;
+  cursor: pointer;
+  a {
+    display: block;
+    padding: 10px 20px;
+    color: $cWhite;
+    font-weight: bold;
+  }
+}
+
 /* member-mst.html ----------------------------------------- */
 .member-mst {
   header {
@@ -69,60 +112,35 @@ button {
   .hd-nav {
     width: 100%;
     max-width: $contentMaxWidth;
-    height: 100%;
     margin: 0 auto;
-    padding: 0 $pdLR;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-    &__left {
-      display: flex;
-      flex-wrap: wrap;
-      width: 50%;
-      li {
-        color: $cWhite;
-        font-size: $ftLg;
-        font-weight: bold;
-        &:nth-child(2) {
-          margin-left: $mpLg;
-        }
-      }
-    }
-    &__right {
+    height: 100%;
+    &__ul {
+      height: 100%;
       display: flex;
       justify-content: space-between;
+      align-items: center;
       flex-wrap: wrap;
-      width: 50%;
-      li {
-        color: $cWhite;
-        font-weight: bold;
-        a {
-          color: $cWhite;
-        }
-      }
     }
     &__item {
-      padding: 10px 0;
+      padding: 5px 30px;
+      color: $cWhite;
+      font-weight: bold;
+      a {
+        color: $cWhite;
+        display: block;
+      }
     }
     &__btn {
       button {
-        background-color: $cBlue;
-        a {
-          padding: 10px 20px;
-          display: block;
-        }
+        margin: 5px 30px;
       }
     }
   }
   .member-search {
-    width: 100%;
-    margin: $mpMd auto $mpSm;
-    padding: 0 $pdLR;
-    max-width: $contentMaxWidth;
+    margin-top: 40px;
+    margin-bottom: 20px;
     &__title {
-      font-size: $ftMd;
-      margin-bottom: $mpSm;
+      margin-bottom: 20px;
     }
     &__form {
       display: flex;
@@ -133,118 +151,199 @@ button {
     &__form-group {
       display: flex;
       align-items: center;
-      margin-bottom: $mpSm;
+      margin-bottom: 20px;
       label {
         display: block;
-        margin-right: 7px;
+        margin: 0 3px 0 10px;
         line-height: 1.3;
       }
-      select,
-      input {
-        height: 50px;
+      label[for='venue'] {
+        margin-left: 0;
       }
     }
-    &__submit {
-      padding: 10px 20px;
-      background-color: $cBlue;
-      color: $cWhite;
-      font-weight: bold;
-      cursor: pointer;
+    &__form-group-button {
+      margin-left: auto;
+      margin-bottom: 20px;
     }
   }
-  .member {
-    width: 100%;
-    margin: $mpSm auto;
-    padding: 0 $pdLR;
-    max-width: $contentMaxWidth;
+  .member-list-and-details {
     display: flex;
     justify-content: space-between;
-    .member-list {
-      width: 45%;
-      &__title {
-        font-size: $ftLg;
-        font-weight: bold;
-        color: $cBlue;
-        margin-bottom: $mpXs;
+  }
+  .member-list {
+    width: 45%;
+    &__title {
+      color: $cBlue;
+      margin-bottom: 20px;
+    }
+    &__table-wrapper {
+      overflow-y: scroll;
+      max-height: 100vh;
+    }
+    &__table {
+      width: 100%;
+      border-collapse: collapse;
+      thead {
+        th {
+          background-color: $cLightBlue;
+          color: $cWhite;
+        }
       }
-      &__table {
-        width: 100%;
-        border-collapse: collapse;
-        thead {
-          th {
-            background-color: $cLightBlue;
-            color: $cWhite;
-          }
-        }
-        th,
-        td {
-          border: 1px solid $cGray;
-          padding-top: 7px;
-          padding-bottom: 7px;
-        }
-        td {
-          padding-left: 3px;
-        }
-        .td-name {
-          a {
-            color: $cBlue;
-          }
+      th,
+      td {
+        border: 1px solid $cGray;
+        padding-top: 7px;
+        padding-bottom: 7px;
+      }
+      td {
+        padding-left: 3px;
+      }
+      .td-name {
+        a {
+          color: $cBlue;
         }
       }
     }
-    .member-details {
-      width: 53%;
-
-      .tab_item {
-        width: calc(100% / 3);
-        height: 50px;
-        line-height: 50px;
-        background-color: $cLightGray;
-        text-align: center;
-        display: block;
-        float: left;
-        text-align: center;
-        font-weight: bold;
-        border-top: 3px solid $cGray;
-        border-bottom: 3px solid $cGray;
-        cursor: pointer;
-        &.member-info {
-          border-left: 3px solid $cGray;
-        }
-        &.my-venue {
-          border-left: 3px solid $cGray;
-          border-right: 3px solid $cGray;
-        }
-        &.other-venue {
-          border-right: 3px solid $cGray;
-        }
+  }
+  .member-details {
+    width: 53%;
+    .tab_item {
+      width: calc(100% / 3);
+      height: 62px;
+      padding-top: 20px;
+      line-height: 1;
+      background-color: $cLightGray;
+      text-align: center;
+      display: block;
+      float: left;
+      text-align: center;
+      font-weight: bold;
+      border-top: 3px solid $cGray;
+      border-bottom: 3px solid $cGray;
+      cursor: pointer;
+      &.member-info-tab {
+        border-left: 3px solid $cGray;
       }
-
-      input[name='tab_item'] {
-        display: none;
-      }
-
-      .tab_content {
-        display: none;
-        padding: 40px 40px 0;
-        clear: both;
-        overflow: hidden;
+      &.my-venue-tab {
         border-left: 3px solid $cGray;
         border-right: 3px solid $cGray;
-        border-bottom: 3px solid $cGray;
       }
-
-      #member-info:checked ~ #member-info_content,
-      #my-venue:checked ~ #my-venue_content,
-      #other-venue:checked ~ #other-venue_content {
-        display: block;
+      &.other-venue-tab {
+        border-right: 3px solid $cGray;
       }
-
-      .tabs input:checked + .tab_item {
-        background-color: $cWhite;
-        border-bottom: none;
-        cursor: auto;
+    }
+    input[name='tab_item'] {
+      display: none;
+    }
+    .tab_content {
+      display: none;
+      clear: both;
+      overflow: hidden;
+      border-left: 3px solid $cGray;
+      border-right: 3px solid $cGray;
+      border-bottom: 3px solid $cGray;
+      padding: 40px $pdLR;
+    }
+    #member-info:checked ~ #member-info_content,
+    #my-venue:checked ~ #my-venue_content,
+    #other-venue:checked ~ #other-venue_content {
+      display: block;
+    }
+    .tabs input:checked + .tab_item {
+      background-color: $cWhite;
+      border-bottom: none;
+      cursor: auto;
+    }
+  }
+  .member-info {
+    &__title {
+      color: $cBlue;
+      padding-bottom: 20px;
+    }
+    &__form-group {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-bottom: 30px;
+      label {
+        width: 20%;
       }
+      input,
+      select,
+      textarea,
+      .err-msg {
+        width: 78%;
+      }
+      .err-msg {
+        margin-left: auto;
+      }
+    }
+    &__form-group-radio {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-bottom: 20px;
+      .title {
+        width: 20%;
+      }
+      .radio-buttons,
+      .err-msg {
+        width: 78%;
+      }
+      .radio-buttons {
+        display: flex;
+        align-items: center;
+        flex-wrap: wrap;
+        label {
+          margin: 0 12px 0 3px;
+        }
+      }
+      .err-msg {
+        margin-left: auto;
+      }
+    }
+    &__form-group-zip-code {
+      display: flex;
+      justify-content: space-between;
+      flex-wrap: wrap;
+      align-items: center;
+      margin-bottom: 20px;
+      label {
+        width: 20%;
+      }
+      // input {
+      //   width: 100px;
+      //   margin-right: 10px;
+      // }
+      .zip-code-contents,
+      .err-msg {
+        width: 78%;
+      }
+      .zip-code-contents {
+        margin-left: auto;
+        display: flex;
+        justify-content: space-between;
+        input,
+        button {
+          width: 48%;
+        }
+        button {
+          text-align: center;
+        }
+      }
+      .err-msg {
+        margin-left: auto;
+      }
+    }
+    &__form-required-item {
+      font-size: 14px;
+      font-weight: bold;
+      color: $cWhite;
+      background-color: $cLightBlue;
+      padding: 3px 5px;
+      letter-spacing: 2px;
     }
   }
 }
