--- a/styles/style.css
+++ b/styles/style.css
@@ -29,14 +29,15 @@ button {
 
 select,
 input[type=text],
-input[type=email] {
-  height: 50px;
+input[type=email],
+input[type=date] {
+  height: 40px;
   padding: 0 5px;
 }
 
 input[type=radio] {
   width: 20px;
-  height: 50px;
+  height: 40px;
 }
 
 /* common  ----------------------------------------- */
@@ -89,7 +90,8 @@ input[type=radio] {
 /* member-mst.html ----------------------------------------- */
 .member-mst header {
   background-color: #8faadc;
-  height: 110px;
+  height: 90px;
+  margin-bottom: 40px;
 }
 .member-mst .hd-nav {
   width: 100%;
@@ -105,23 +107,23 @@ input[type=radio] {
   flex-wrap: wrap;
 }
 .member-mst .hd-nav__item {
-  padding: 5px 30px;
+  padding: 0 30px;
   color: white;
   font-weight: bold;
+  line-height: 1;
 }
 .member-mst .hd-nav__item a {
   color: white;
   display: block;
 }
 .member-mst .hd-nav__btn button {
-  margin: 5px 30px;
+  margin: 0 30px;
 }
 .member-mst .member-search {
-  margin-top: 40px;
-  margin-bottom: 20px;
+  margin-bottom: 40px;
 }
 .member-mst .member-search__title {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .member-mst .member-search__form {
   display: flex;
@@ -132,7 +134,7 @@ input[type=radio] {
 .member-mst .member-search__form-group {
   display: flex;
   align-items: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
 }
 .member-mst .member-search__form-group label {
   display: block;
